Add CV link to homepage and style updates for navigation

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <a href="#contact">
             <i class="fas fa-envelope"></i> Contact
         </a>
+      
     </nav>
 
     <div class="content-section">
@@ -54,8 +55,11 @@
                             <h1 class="animate-text">React Native Developer</h1>
                             <p class="title-desc animate-text">
                                 Passionate about creating beautiful and functional mobile applications.
-                            Specializing in React Native development with a focus on user experience.
+                                Specializing in React Native development with a focus on user experience.
                             </p>
+                            <a href="PeruCV.pdf" target="_blank" class="cv-link">
+                                <i class="fas fa-file-alt"></i> View My CV
+                            </a>
                         </div>
                     </div>
                 </div>
